@@ -32,7 +32,6 @@
 #define HAVE_INET_NTOP 1
 #define HAVE_FCNTL 1
 #define HAVE_FORK 1
-#define ASHTECH_ENABLE 1
 #define CONTROL_SOCKET_ENABLE 1
 #define EARTHMATE_ENABLE 1
 #define EVERMORE_ENABLE 1
